--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>document Processor</h1>
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js"></script> -->
+    <script src="../dist/document-engine.min.js"></script>
   </body>
 </html>
