--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
   <body>
     <h1>document Processor</h1>
     <!-- <script src="./index.js"></script> -->
-    <script src="../dist/document-engine.min.js"></script>
+    <script src="../dist/main.js"></script>
   </body>
 </html>
